# InventorEx4QtDesigner

./: .gitignore  CMakeLists.txt  README  minimal.cpp  modify wireframe.txt
BB channel/: BB channel.vcxproj  BB channel.vcxproj.filters  InventorEx.cpp  InventorEx.h  SbBasicP.h  SoColorMask.cpp  SoColorMask.h  SoColorMaskElement.cpp  SoColorMaskElement.h  SoDeferredRender.cpp  SoDeferredRender.h  SoGLColorMaskElement.cpp  SoGLColorMaskElement.h  SoGradientBackground.cpp  SoGradientBackground.h  SoSwitchToChild.cpp  SoSwitchToChild.h  SoZoomAdaptor.cpp  SoZoomAdaptor.h  fragmentShader.glsl  geometryShader.glsl  highlight_fragment_shader.glsl  highlight_fragment_shader2.glsl  main.cpp  normal_fragment.glsl  normal_vertex.glsl  perpixel_fragment.glsl  perpixel_fragment_ana.glsl  perpixel_vertex.glsl  perpixel_vertex_new.glsl  perpixel_vertex_offset.glsl  utils.h  vertexShader.glsl  vertex_shader.glsl  vertex_shader2.glsl
Coin3dPack_x64_Debug/include/Inventor/Win/: SoWin.h  SoWinBasic.h  SoWinComponent.h  SoWinObject.h  SoWinRenderArea.h
Coin3dPack_x64_Debug/include/Inventor/Win/devices/: SoWinDevice.h
Coin3dPack_x64_Debug/include/Inventor/Win/editors/: SoWinColorEditor.h
Coin3dPack_x64_Debug/include/Inventor/Win/viewers/: SoWinFullViewer.h  SoWinViewer.h
Coin3dPack_x64_Debug/lib/: Quarter1d.lib
Coin3dPack_x64_Debug/lib/cmake/Coin-4.0.1/: coin-config-version.cmake  coin-config.cmake  coin-export-debug.cmake  coin-export.cmake
Coin3dPack_x64_Debug/lib/cmake/Quarter-1.1.0/: quarter-config-version.cmake  quarter-config.cmake  quarter-export-debug.cmake  quarter-export-release.cmake  quarter-export.cmake
Data/: NurbsCurve.iv  NurbsSurface.iv  annotation.iv  cranfld.iv  hole.iv
NavigationWidget/: CMakeLists.txt  CommonHeaderFiles.cpp  CommonHeaderFiles.h  NavigationStyle.cpp  NavigationStyle.h  NavigationWidget.cpp  NavigationWidget.h
builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DirectUILoaderExample.vcxproj  DirectUILoaderExample.vcxproj.filters  DynamicUILoaderExample.vcxproj  DynamicUILoaderExample.vcxproj.filters  ExaminerExample.vcxproj  ExaminerExample.vcxproj.filters  Example.vcxproj  Example.vcxproj.filters  InheritUIExample.vcxproj  InheritUIExample.vcxproj.filters  InventorEx4QtDesigner.sln  MDIExample.vcxproj  MDIExample.vcxproj.filters  SuperImpositionExample.vcxproj  SuperImpositionExample.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
builds/DirectUILoaderExample_autogen/include_Debug/: ui_QuarterViewer.h
builds/DynamicUILoaderExample_autogen/include_Debug/EWIEGA46WW/: qrc_quarterviewer_CMAKE_.cpp
builds/ExaminerExample_autogen/EWIEGA46WW/: qrc_quarterviewer.cpp
builds/MDIExample_autogen/: mocs_compilation_Debug.cpp
builds/MDIExample_autogen/include_Debug/EWIEGA46WW/: moc_MdiMainWindow.cpp  moc_MdiMainWindow.cpp.d
